fixed css spacing error

--- a/public/styles.css
+++ b/public/styles.css
@@ -18,7 +18,8 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
-background: url((https://thumbs.dreamstime.com/z/hair-salon-sign-scissors-design-elements-27031063.jpg) no-repeat fixed;
+background: url((https://thumbs.dreamstime.com/z/hair-salon-sign-scissors-design-elements-27031063.jpg);
+  no-repeat fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
